fix: fix caption overlaping issue with controls

--- a/src/scss/_lg-variables.scss
+++ b/src/scss/_lg-variables.scss
@@ -58,7 +58,7 @@ $lg-thumb-container-height: 100px;
 // z-index
 $zindex-outer: 1050 !default;
 $zindex-progressbar: 1083 !default;
-$zindex-controls: 1080 !default;
+$zindex-controls: 1084 !default;
 $zindex-toolbar: 1082 !default;
 $zindex-subhtml: 1080 !default;
 $zindex-components: 1080 !default;
